[package]
name = "handmade"
version = "0.0.1"
authors = ["jshrake <JustinShrake@gmail.com>"]

[dependencies]
libc = "*"

[target.i686-pc-windows-gnu.dependencies.winapi]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"

[target.i686-pc-windows-gnu.dependencies.gdi32-sys]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"

[target.i686-pc-windows-gnu.dependencies.user32-sys]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"

[target.i686-pc-windows-gnu.dependencies.kernel32-sys]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"

[target.x86_64-pc-windows-gnu.dependencies.winapi]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"

[target.x86_64-pc-windows-gnu.dependencies.gdi32-sys]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"

[target.x86_64-pc-windows-gnu.dependencies.user32-sys]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"

[target.x86_64-pc-windows-gnu.dependencies.kernel32-sys]
git = "https://github.com/jshrake/winapi-rs"
branch = "handmade-hero"
